@startuml ActionTile
title ActionTile

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

abstract class ActionTile {
    --
    + getCategory() : TileCategory
    + {abstract} onLanded(player : Player&, game : Game&) : void
}

class ChanceTile {
    --
    + onLanded(player : Player&, game : Game&) : void
}

class CommunityChestTile {
    --
    + onLanded(player : Player&, game : Game&) : void
}

class FestivalTile {
    --
    + onLanded(player : Player&, game : Game&) : void
}

abstract class TaxTile {
    --
    + onLanded(player : Player&, game : Game&) : void
    + {abstract} calculateTax(player : const Player&) : int
}

class IncomeTaxTile {
    - flatAmount : int
    - percentage : int
    --
    + onLanded(player : Player&, game : Game&) : void
    + calculateTax(player : const Player&) : int
}

class LuxuryTaxTile {
    - flatAmount : int
    --
    + calculateTax(player : const Player&) : int
}

ActionTile <|-- ChanceTile
ActionTile <|-- CommunityChestTile
ActionTile <|-- FestivalTile
ActionTile <|-- TaxTile
TaxTile    <|-- IncomeTaxTile
TaxTile    <|-- LuxuryTaxTile

@enduml
